# workout_api

./: Makefile  pyproject.toml  requirements.txt
workout_api/atleta/: controller.py  schemas.py
workout_api/categorias/: controller.py
workout_api/centro_treinamento/: controller.py
